# mvr

./: .gitignore  CMakeLists.txt  Makefile  Makefile.dep  README.md  log.txt
backup/include/: MvrACTS.h  MvrAMPTU.h  MvrASyncTask.h  MvrAction.h  MvrActionAvoidFront.h  MvrActionAvoidSide.h  MvrActionBumpers.h  MvrActionColorFollow.h  MvrActionDriveDistance.h  MvrActionGoto.h  MvrActionGroups.h  MvrActionIRs.h  MvrActionInput.h  MvrActionLimiterBackwards.h  MvrActionLimiterForwards.h  MvrActionMovementParametersDebuggering.h  MvrActionRatioInput.h  MvrActionRobotJoydrive.h  MvrActionStallRecover.h  MvrActionStop.h  MvrActionTriangleDriveTo.h  MvrActionTurn.h  MvrAnalogGyro.h  MvrArg.h  MvrArgumentBuilder.h  MvrArgumentParser.h  MvrBatteryConnector.h  MvrBumpers.h  MvrCommands.h  MvrCondition.h  MvrConfig.h  MvrConfigGroup.h  MvrDPPTU.h  MvrDataLogger.h  MvrDeviceConnection.h  MvrDrawingData.h  MvrExport.h  MvrFileDeviceConnection.h  MvrFileParser.h  MvrFunctor.h  (+52 more)
backup/src/: MvrAction.cpp  MvrActionAvoidFront.cpp  MvrArgumentBuilder.cpp  MvrArgumentParser.cpp  MvrCondition.cpp  MvrConfig.cpp  MvrConfigArg.cpp  MvrConfigGroup.cpp  MvrDataLogger.cpp  MvrFileDeviceConnection.cpp  MvrInterpolation.cpp  MvrKeyHandler.cpp  MvrLog.cpp  MvrLogFileConnection.cpp  MvrModuleLoader.cpp  MvrMutex.cpp  MvrPriorityResolver.cpp  MvrRobot.cpp  MvrRobotConfigPacketReader.cpp  MvrRobotConnector.cpp  MvrRobotJoyHandler.cpp  MvrRobotPacket.cpp  MvrRobotPacketReaderThread.cpp  MvrRobotPacketReceiver.cpp  MvrRobotPacketSender.cpp  MvrRobotParams.cpp  MvrRobotTypes.cpp  MvrSerialConnection.cpp  MvrSimpleConnector.cpp  MvrSocket.cpp  MvrSyncLoop.cpp  MvrSyncTask.cpp  MvrSystemStatus.cpp  MvrThread.cpp  MvrTransform.cpp  Mvria.cpp  md5.cpp  mvriaUtil.cpp
examples/: logSIPData.cpp  logSIPs.cpp  simpleConnect.cpp  simpleEncoder.cpp
include/: MvrACTS.h  MvrAMPTU.h  MvrASyncTask.h  MvrAction.h  MvrActionAvoidFront.h  MvrActionAvoidSide.h  MvrActionBumpers.h  MvrActionColorFollow.h  MvrActionConstantVelocity.h  MvrActionDeceleratingLimiter.h  MvrActionDesired.h  MvrActionDriveDistance.h  MvrActionGoto.h  MvrActionGotoStraight.h  MvrActionGroup.h  MvrActionGroups.h  MvrActionIRs.h  MvrActionInput.h  MvrActionJoydrive.h  MvrActionKeyDrive.h  MvrActionKeydrive.h  MvrActionLimiterBackwards.h  MvrActionLimiterForwards.h  MvrActionLimiterRot.h  MvrActionLimiterTableSensor.h  MvrActionLimterRot.h  MvrActionMovementParameters.h  MvrActionMovementParametersDebuggering.h  MvrActionMovementParametersDebugging.h  MvrActionRatioInput.h  MvrActionRobotJoydrive.h  MvrActionStallRecover.h  MvrActionStop.h  MvrActionTriangleDriveTo.h  MvrActionTurn.h  MvrAnalogGyro.h  MvrArg.h  MvrArgumentBuilder.h  MvrArgumentBuiler.h  MvrArgumentParser.h  (+139 more)
src/: MvrACTS.cpp  MvrAMPTU.cpp  MvrASyncTask.cpp  MvrAction.cpp  MvrActionAvoidFront.cpp  MvrActionAvoidSide.cpp  MvrActionBumpers.cpp  MvrActionColorFollow.cpp  MvrActionConstantVelocity.cpp  MvrActionDeceleratingLimiter.cpp  MvrActionDesired.cpp  MvrActionDriveDistance.cpp  MvrActionGoto.cpp  MvrActionGotoStraight.cpp  MvrActionGroup.cpp  MvrActionGroups.cpp  MvrActionIRs.cpp  MvrActionInput.cpp  MvrActionJoydrive.cpp  MvrActionKeydrive.cpp  MvrActionLimiterBackwards.cpp  MvrActionLimiterForwards.cpp  MvrActionLimiterRot.cpp  MvrActionLimiterTableSensor.cpp  MvrActionMovementParameters.cpp  MvrActionMovementParametersDebugging.cpp  MvrActionRatioInput.cpp  MvrActionRobotJoydrive.cpp  MvrActionStallRecover.cpp  MvrActionStop.cpp  MvrActionTriangleDriveTo.cpp  MvrActionTurn.cpp  MvrAnalogGyro.cpp  MvrArg.cpp  MvrArgumentBuilder.cpp  MvrArgumentParser.cpp  MvrBasePacket.cpp  MvrBatteryConnector.cpp  MvrBatteryMTX.cpp  MvrBumpers.cpp  (+126 more)
tests/: angleFixTest.cpp  configSectionTest.cpp  encoderConvertSelf.cpp  encoderTest.cpp  functorTest.cpp  hardDriveWander.cpp  ioTest.cpp  lineTest.cpp  moveCommandsTest.cpp  serialDumpTest.cpp  serialProbeTest.cpp  serialTest2.cpp  systemStatusThreadTest.cpp  tcpConnectionTest.cpp  test.cpp  testAngle.cpp  testCOM.cpp  testConfig.cpp  testFileParser.cpp  testInterpolation.cpp  testMath.cpp  testMutexLockWarning.cpp  testSerial.cpp  testSerialDump.cpp  testSerialProbe.cpp  testSystemStatusBasic.cpp  testTcpConnection.cpp  testThread.cpp  threadTest.cpp  timePrinter.cpp  timeTest.cpp  timingTest.cpp
utils/: jiekou.h
